@startuml ERD

!theme vibrant

entity User {
  + idUser : BINARY(16) <<PK>>
  --
  * username : VARCHAR(100) <<UNIQUE>>
  * password : VARCHAR(100)
  name : VARCHAR(100)
  surname : VARCHAR(100)
}

entity Album {
  + idAlbum : INT <<PK>> <<AUTO_INCREMENT>>
  --
  * name : VARCHAR(100) <<UNIQUE with idUser>>
  * year : INT
  * artist : VARCHAR(100)
  image : VARCHAR(255)
  # idUser : BINARY(16) <<FK>>
}

entity Song {
  + idSong : INT <<PK>> <<AUTO_INCREMENT>>
  --
  * title : VARCHAR(100)
  * year : INT
  genre : VARCHAR(100)
  * audioFile : VARCHAR(255)
  # idAlbum : INT <<FK>>
  # idUser : BINARY(16) <<FK>>
}

entity playlist_metadata {
  + idPlaylist : INT <<PK>> <<AUTO_INCREMENT>>
  --
  * name : VARCHAR(100) <<UNIQUE with idUser>>
  * birthday : TIMESTAMP <<DEFAULT CURRENT_TIMESTAMP>>
  # idUser : BINARY(16) <<FK>>
}

entity playlist_content {
  # idPlaylist : INT <<FK>> <<PK>>
  # idSong : INT <<FK>> <<PK>>
  --
  <<UNIQUE (idSong, idPlaylist)>>
}

User "1" -- "0..*" Album : owns
User "1" -- "0..*" Song : owns
User "1" -- "0..*" playlist_metadata : creates
Album "1" -- "0..*" Song : contains
playlist_metadata "1" -- "0..*" playlist_content : has
Song "1" -- "0..*" playlist_content : belongs to

@enduml
